QQuickTextEdit: call implicitWidth() even if requireImplicitWidth is true

Before once requireImplicitWidth was set to true by requesting
the implicit width, the implicit (and width) was never updated again, even
if the text was updated/changed.
Adding also a test

Task-number: QTBUG-63153
Change-Id: Ie3bac4baeb14c2e69acc43d11a351ac91d5400da
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>